c/examples/writing-a-c-compiler-tests/tests/chapter_10/invalid_types/redeclare_fun_as_file_scope_var.c
int foo(void);

/* this conflict with the previous declaration of foo as a function */
int foo;

int main(void) {
    return 0;
}
